--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,20 +1,14 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(message: String)
+@(title:String)(cacheBuster:String)
+<!DOCTYPE html>
 
-@*
- * Call the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@main("Welcome to Play") {
-
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-     *@
-    @welcome(message, style = "scala")
-
-}
+<html>
+    <head>
+        <title>@title</title>
+        <!--<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">-->
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+    </head>
+    <body >
+        <div id="app"></div>
+        <script src="@routes.Assets.versioned("javascripts/bundle.js")?cb=@(cacheBuster)" type="text/javascript"></script>
+    </body>
+</html>
